// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.SwitchSelector props testing bgStyle="filled" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-iebis9"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    dark={true}
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    dark={true}
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    dark={true}
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing bgStyle="outline" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing bgStyle="transparent" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-fxkpn4"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing bgStyle="underline" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-1dd3l8c"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing bgStyle=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderRadius="50%" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-11pyzjq"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius="50%"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius="50%"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius="50%"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderRadius=8 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-cg3u2t"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={8}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={8}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={8}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderRadius=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderWidth=2 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-1x5thh9"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderWidth=3 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-i70kso"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderWidth=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderWidthFocus=2 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-cg5gsy"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderWidthFocus=3 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-1hkc6jt"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing borderWidthFocus=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing className="my-classname" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx my-classname"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing className="test-classname" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx test-classname"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema="black" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-sqlojm"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="black"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="black"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="black"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema="grey" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-5brnib"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="grey"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema="grey-rich" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-5brnib"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="grey-rich"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey-rich"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey-rich"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema="red" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-emi9wy"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="red"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="red"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="red"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema="red-rich" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-emi9wy"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="red-rich"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="red-rich"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="red-rich"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema="white" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-irvmb0"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="white"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="white"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="white"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing colorSchema=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing controlled=false 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing controlled=true 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing default props 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing disabled=false 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing disabled=false 3`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing disabled=true 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-7wsybp uu-gciv2q uu5-common-disabled"
  disabled={true}
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={-1}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="grey"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing disabled=true 3`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-7wsybp uu-gciv2q uu5-common-disabled"
  disabled={true}
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={-1}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="grey"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing elevation=-1 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-1yfihlc"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing elevation=1 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-aoj10e"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing elevation=5 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-18a68h1"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing elevation=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing fullTextSearchPriority=0 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx undefined uu-fulltextsearch-0"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing fullTextSearchPriority=0 2`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx undefined uu-fulltextsearch-0"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing hidden=false 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing hidden=false 3`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing hidden=true 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx uu5-common-hidden"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing hidden=true 3`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx uu5-common-hidden"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing id="myId" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="myId"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing id="test-id" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="test-id"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing mainAttrs=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing name="myName" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  name="myName"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing nestingLevel="box" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing nestingLevel="inline" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing noPrint=false 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing noPrint=true 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing readOnly=false 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing readOnly=true 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-7wsybp uu-gciv2q"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  readOnly={true}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    colorSchema="grey"
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    colorSchema="grey"
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing selected=false 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing selected=true 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx uu5-common-selected"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing size="l" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="l"
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="l"
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="l"
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing size="m" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing size="s" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="s"
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="s"
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="s"
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing size="xl" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="xl"
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="xl"
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
    size="xl"
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing style={"margin":8} 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing tooltip="My Tooltip" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title="My Tooltip"
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing value="high" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing value="low" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing value="normal" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing value=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing width="5em" 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-1o624zg"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing width=400 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-17xn64b"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;

exports[`UU5.Bricks.SwitchSelector props testing width=undefined 1`] = `
<div
  className="uu-1xqnbvi uu5-bricks-switch-selector uu-xmtvzx"
  id="uuID"
  onBlur={[Function]}
  onFocus={[Function]}
  style={Object {}}
  tabIndex={0}
  title={null}
>
  <SwitchSelectorItem
    active={true}
    borderRadius={2}
    content="low"
    key="low"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="normal"
    key="normal"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
  <SwitchSelectorItem
    borderRadius={2}
    content="high"
    key="high"
    onClick={[Function]}
    onMouseDown={[Function]}
  />
</div>
`;
